--- a/clients/src/styles/navigateur.css
+++ b/clients/src/styles/navigateur.css
@@ -1,31 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 .Navigation{
     width: 100%;
-    background-color:rgba(255, 255, 255, 0.836);
-    font-family:'Lobster&display=swap', Arial, sans-serif
+    background-color: #e4e4e4;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    padding-top: .5em;
+	padding-bottom: .5em;
+	
 }
 .navigation-ul{
     /* position: fixed; */
-    margin-top: 0%;
+    
     padding-top: 0%;
-   
+    margin-top: 5px;
     list-style: none;
    margin-inline: auto;
-    width: 90vw;
-    height: 80px;
+    width: 100vw;
+    height: 4rem;
     display: flex;
-    justify-content: space-around;
+    
     align-items: center;
+    margin-left: 5rem;
+}
+h1{
+    margin-left: 1rem;
 }
 .Navigation a {
-    color: rgb(36, 34, 34);
-    font: bold;
+    color: #34495e;
+   margin-left: 2rem;;
     font-size: 1rem;
     font-weight: 700;
     
     text-decoration: none;
     position: relative;
 }
+a:hover {
+	color: #718daa;
+}
+
 .Navigation img{
   
     width: 70px;
@@ -34,18 +46,18 @@
 .under-list{
     position: absolute;
     display: none;
-    background-color:rgba(255, 255, 255, 0.836);
+    background-color:transparent;
     list-style: none;
     left: -10px;
     flex-direction:column;
     align-items: flex-start;
     padding: 20px 5px;
-    width: 300px;
+    width: 15rem;
 }
 .under-list li{
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border-bottom: 2px solid rgb(31, 30, 30);
+    margin-bottom: 1rem;
+    margin-left: .2rem;
+    
 }
 
 /* afficher underlist when we hover the li */
