--- a/clients/src/App.css
+++ b/clients/src/App.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,200;1,100&display=swap');
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif 
 }
 .container{
-  min-height:calc(100vh - 8rem);
+  min-height:calc(100vh - 7rem);
   background-color: #ffffff;
 }
