--- a/clients/src/styles/Footer.css
+++ b/clients/src/styles/Footer.css
@@ -4,8 +4,8 @@
     width: 100%;
     height: 4rem;
     justify-items: center;
-   background-color:  rgba(180, 180, 180, 0.836);
-   color: rgb(36, 34, 34);
+    background-color: #ebebeb;
+    color: #34495e;
      display: flex;
      justify-content: center;
      position: absolute;
