--- a/clients/src/styles/Footer.css
+++ b/clients/src/styles/Footer.css
@@ -10,7 +10,7 @@
      justify-content: center;
      position: absolute;
    }
-   h4{
+   .footer h4{
     margin-top: 10px;
     font-size: 20px;
    }
