--- a/clients/src/styles/card.css
+++ b/clients/src/styles/card.css
@@ -11,10 +11,10 @@ height: 15rem;
 
 }
 
-.content h1 {font-size: 3rem;
+.card .content h1 {font-size: 3rem;
     text-transform: uppercase;}
 
- img{
+ .card img{
     width: 30%;
     
    margin: 1rem 2rem ;
@@ -22,14 +22,14 @@ height: 15rem;
     box-shadow:  0px 0px 14px 1px #80808091;
     
 }
-.content{
+.card .content{
     display: flex;
     flex-direction: column;
     justify-content:space-evenly;
     width: 50vw;
     border-left: 1px solid #000;
 }
-.info{
+.card .info{
     display: flex;
     border: #000 1px solid ;
     justify-content: flex-start;
@@ -37,13 +37,13 @@ height: 15rem;
     margin: .3rem ;
 
 }
-h3{color: #1d9c3b !important;}
-h1,h2,h3{
+.card .info h3{color: #1d9c3b !important;}
+.card .content h1,h2,h3{
     padding: 0;
     margin-left: .2rem;
     font-family: 'Roboto', sans-serif;
 }
-.menu{
+.card .menu{
     display: flex;
     flex-direction: column;
     justify-content: center;
