--- a/clients/src/Pages/dashboard-admin/tab.css
+++ b/clients/src/Pages/dashboard-admin/tab.css
@@ -56,7 +56,18 @@
   }
   .content-tabs {
     flex-grow : 1;
+    display: flex;
+    flex-direction: column;
+
     
+  }
+  .add_etab{
+    margin: 1em 40%;
+    width: 9rem;
+    height: 3rem;
+    border-radius: 0.5em;
+    border: #34495e solid 1px;
+    font-size: larger;
   }
   .content {
     background: white;
@@ -64,10 +75,29 @@
     width: 100%;
     height: 100%;
     display: none;
+    
   }
   
   
   .active-content {
     display: block;
   }
-  
+  .title_etab {
+    margin: 1em;
+    border-bottom: #34495e solid 1px;
+  }
+  #add_event {   background-color: green;
+    color:white;
+    margin-top: 0.5rem;
+    margin-left: 60%;
+    height: 3rem;
+    border: none; 
+    width: 12rem;
+    border-radius: 0.5em;
+    font-size: larger;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    
+
+  }
