--- a/clients/src/component/user_card.css
+++ b/clients/src/component/user_card.css
@@ -1,10 +1,11 @@
 .card-user{
-    margin: auto;
-    width: 90%;
+    margin:10px auto;
+    width: 95%;
     height: 10rem;
     display: flex;
-    background-color: #ffffff;
+    background-color: rgb(253, 253, 253);
     align-items: center;
+    position: relative;
     border-radius: 1rem;
     box-shadow: 0px 5px 10px #1687d933;
     border: 1px solid rgb(137, 137, 255);
@@ -18,24 +19,31 @@
     border-radius: 50%;
 }
 .user-description{
-width: 60 vw;
-height: 100vh;
+width: 60%;
+height: 100%;
 margin-left: 0.5em;
 display: flex;
 flex-direction: column;
-justify-content: space-between;
+justify-content: center;
+
 }
 .user-description h1,h3{
-    font-size: large;
+    font-size: 1.5em;
     color: #000;
 }
-
+.etab-edited{
+    display: flex;
+    align-items: center;
+    width: 15%;
+    
+}
 #button_supp{
     border-radius: 1rem;
     border: none;
     align-items: center;
     width: 3rem;
     height: 3rem;
+   
     color: red;
     
 }
