--- a/clients/src/styles/dashbord.css
+++ b/clients/src/styles/dashbord.css
@@ -4,9 +4,14 @@
   }
   .dash_outlet{
     width: 80vw;
+    margin-left: 20vw;
   }
   .wrapper .sidebar{
     width: 20vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
     height: 100vh;
     background: #ebebeb;
     padding: 30px 0px;
