--- a/clients/src/Pages/dashboard-admin/tab.css
+++ b/clients/src/Pages/dashboard-admin/tab.css
@@ -9,6 +9,35 @@
     word-break: break-all;
     
   }
+  .myButton {
+	box-shadow: 0px 10px 14px -7px #000000;
+	background:linear-gradient(to bottom, #000000 5%, #4e5050 100%);
+	background-color:#111414;
+	border-radius:15px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:13px 42px;
+	
+	text-shadow:0px 1px 0px #0c0c0c;
+    margin-left: 10px;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #994044 5%, #e72b70 100%);
+	background-color:#e72b70;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+   
+}
+.filtre{
+    display: flex;
+    margin: 20px;
+}
   
   .bloc-tabs {
     display: flex;
@@ -63,11 +92,18 @@
   }
   .add_etab{
     margin: 1em 40%;
-    width: 9rem;
+    
     height: 3rem;
     border-radius: 0.5em;
     border: #34495e solid 1px;
     font-size: larger;
+  }
+  .add_etab:hover{
+    background-color:#3c5fa0;
+  }
+  .add_etab:active{
+    position:relative;
+    top:1px;
   }
   .content {
     background: white;
