--- a/clients/src/component/user_card.css
+++ b/clients/src/component/user_card.css
@@ -12,8 +12,8 @@
 }
 
 .photo_profile {
-    margin: 2em;
-    width: 25%;
+    margin: 2em 4em;
+    width: 20%;
     height: 90%; 
     
     border-radius: 50%;
