--- a/clients/src/component/card_etab.css
+++ b/clients/src/component/card_etab.css
@@ -1,7 +1,7 @@
 .card-etab{
     margin:  10px auto;
     width: 95%;
-    height: 10rem;
+    height: 13rem;
     display: flex;
     background-color: rgb(253, 253, 253);
     align-items: center;
@@ -17,7 +17,7 @@
     width: 25%;
     height: 90%; 
     
-    border-radius: 50%;
+    border-radius:1em;
 }
 .etab-description{
 width: 60% ;
