--- a/clients/src/component/modal_edit.css
+++ b/clients/src/component/modal_edit.css
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: flex-end;
   }
-  #annuler_updat,#update_etab{
+  #annuler_updat{
     width: 7rem;
     height: 3rem;
     border-radius: 1em;
@@ -83,5 +83,29 @@
  .donnes_comm *{
   margin: 0.5em;
  }
-  
+ .add {
+	background-color:#44c767;
+	
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Times New Roman;
+	font-size:18px;
+	
+	text-decoration:none;
+	text-shadow:0px 0px 0px #2f6627;
+  width: 7rem;
+  height: 3rem;
+  border-radius: 1em;
+  border: 1px solid #ccc;
+}
+.add:hover {
+	background-color:#5cbf2a;
+}
+.add:active {
+	position:relative;
+	top:1px;
+}
+
  
