--- a/clients/src/App.css
+++ b/clients/src/App.css
@@ -9,3 +9,8 @@
   min-height:calc(100vh - 7rem);
   background-color: #ffffff;
 }
+.video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
