--- a/clients/src/styles/navigateur.css
+++ b/clients/src/styles/navigateur.css
@@ -25,8 +25,9 @@
     align-items: center;
     margin-left: 5rem;
 }
-.navigation h1{
+#logo{
     margin-left: 1rem;
+    width: 14rem;
     
 }
 .Navigation a {
