--- a/clients/src/Pages/dashboard-admin/profile.css
+++ b/clients/src/Pages/dashboard-admin/profile.css
@@ -11,6 +11,30 @@
 .g-profile h3{
     margin: 2rem 1rem;
 }
+.add {
+	background-color:#44c767;
+	
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Times New Roman;
+	font-size:18px;
+	
+	text-decoration:none;
+	text-shadow:0px 0px 0px #2f6627;
+  width: 7rem;
+  height: 3rem;
+  border-radius: 1em;
+  border: 1px solid #ccc;
+}
+.add:hover {
+	background-color:#5cbf2a;
+}
+.add:active {
+	position:relative;
+	top:1px;
+}
 .info_perso{
     display: flex;
     flex-direction: column;
