--- a/clients/src/component/Signup/Signup.css
+++ b/clients/src/component/Signup/Signup.css
@@ -13,20 +13,16 @@
   clear: both;
   display: block;
 }
-a {
-  color: inherit;
-  text-decoration: none;
-}
+ 
 
 .login-wrap {
   width: 100%;
-  margin: auto;
+  margin: 1rem auto;
   z-index: 111;
   max-width: 525px;
-  min-height: 80vh;
+  min-height: 40rem;
   position: relative;
-  background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg)
-    no-repeat center;
+  
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
@@ -35,7 +31,7 @@ a {
   height: 100%;
   position: absolute;
   padding: 90px 70px 50px 70px;
-  background: rgba(102, 101, 101, 0.9);
+  background: rgb(102 101 101 / 39%);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm {
@@ -92,15 +88,13 @@ a {
   border: none;
   padding: 15px 20px;
   border-radius: 25px;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgb(255 255 255 / 48%)
 }
-.login-form .group input[data-type="password"] {
-  text-security: circle;
-  -webkit-text-security: circle;
-}
+
 .login-form .group .label {
   color:white;
-  font-size: 12px;
+  font-size: 16px;
+  margin-bottom: 0.5rem;
 }
 .login-form .group .button {
   background: #1161ee;
