--- a/clients/src/component/modal_dem.css
+++ b/clients/src/component/modal_dem.css
@@ -12,6 +12,30 @@
     margin: 5em 20%;
 
   }
+  .add {
+    background-color:#44c767;
+    
+    border:1px solid #18ab29;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Times ;
+    font-size:18px;
+    
+    text-decoration:none;
+    text-shadow:0px 0px 0px #2f6627;
+    width: 7rem;
+    height: 3rem;
+    border-radius: 1em;
+    border: 1px solid #ccc;
+  }
+  .add:hover {
+    background-color:#5cbf2a;
+  }
+  .add:active {
+    position:relative;
+    top:1px;
+  }
   .cccc{
     display: flex;
     margin: 0 1em;
@@ -32,7 +56,7 @@
   .modal_dem input {
     height: 2rem;
       margin-top:1rem;
-      margin-left: 1rem;
+      margin-left: 2rem;
       border-radius: 0.5em;
       font-size: larger;
       border: 1px solid #ccc;
