--- a/clients/src/component/user_card.css
+++ b/clients/src/component/user_card.css
@@ -27,7 +27,7 @@ flex-direction: column;
 justify-content: center;
 
 }
-.user-description h1,h3{
+.user-description h1,.user-description h3{
     font-size: 1.5em;
     color: #000;
 }
@@ -44,6 +44,14 @@ justify-content: center;
     width: 3rem;
     height: 3rem;
    
-    color: red;
+    
     
 }
+#button_supp:hover {
+    
+    color: red;
+  }
+  #button_supp:active {
+    position:relative;
+    top:1px;
+  }
