--- a/clients/src/styles/bar_search.css
+++ b/clients/src/styles/bar_search.css
@@ -11,7 +11,7 @@
 .search>*{
     margin-left: 2rem;
 }
-select,input[type=text]{
+ .search select, .search input[type=text]{
     padding: auto;
     height: 3rem;
     
